--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Test
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Test Webchat Demo</title>
+   </head>
+   <body>
+      <div>
+         Demon Demon
+      </div>
+   </body>
+   <script>
+      const script = document.createElement("script");
+      script.src = "https://cdn.buckplatform.com/webchat.js";
+      script.onload = function () {
+        const token = 'eyJhbGciOiJFRDI1NTE5In0.eyJ1c2VyX2lkIjoiYWZkNjcxMjItZTAzZC00ODAzLTgzYmItMjYwZmViMjhiOWEyIiwiZXhwIjoyNTEzMjUzMzE5LCJuYmYiOjE3MjQzMzQ5MDksImlzcyI6IkJ1Y2suYWkiLCJhdWQiOiJ3ZWJjaGF0IiwiYWNjb3VudF9pZCI6ImRmMGVmM2QzLTQ3NDctNGQ5MC1iYTk2LTE2MmQ2N2FlMzcyMiJ9.53DjedtAjyf6d236dcmOMnAm8esdgTVA0AoVVLlGKhcixAC0souRUeF-cjn4f2lH5kJpqmTksV130Yh9cJdsBg';
+        const accountLogoUrl = 'null';
+        window.initChatApp(token);
+      };
+      document.head.appendChild(script);
+   </script>
+</html>
