--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       const script = document.createElement("script");
       script.src = "https://cdn.buckplatform.com/webchat.js";
       script.onload = function () {
-        const token = 'eyJhbGciOiJFRDI1NTE5In0.eyJ1c2VyX2lkIjoiYWZkNjcxMjItZTAzZC00ODAzLTgzYmItMjYwZmViMjhiOWEyIiwiZXhwIjoyNTEzMjUzMzE5LCJuYmYiOjE3MjQzMzQ5MDksImlzcyI6IkJ1Y2suYWkiLCJhdWQiOiJ3ZWJjaGF0IiwiYWNjb3VudF9pZCI6ImRmMGVmM2QzLTQ3NDctNGQ5MC1iYTk2LTE2MmQ2N2FlMzcyMiJ9.53DjedtAjyf6d236dcmOMnAm8esdgTVA0AoVVLlGKhcixAC0souRUeF-cjn4f2lH5kJpqmTksV130Yh9cJdsBg';
+        'eyJhbGciOiJFRDI1NTE5In0.eyJ1c2VyX2lkIjoiMDg5ZGZiZTgtYzJkNC00OGQ0LWE5NWMtZGViOGNmNmRkN2JjIiwiZXhwIjoyNTEzMzMzMzc4LCJuYmYiOjE3MjQ0MTQ5NjgsImlzcyI6IkJ1Y2suYWkiLCJhdWQiOiJ3ZWJjaGF0IiwiYWNjb3VudF9pZCI6ImIwYzVmMjJkLWQzNDEtNDlmMC1hYWRhLTVhODk4NTNkZjA1YyJ9.PZa-_cJucU8etLMNCksJS6VybYCo0zY0z9EECBMNA52y44Tp9dDpAsxfYP96Z5jWZtMe1gn-J2TFa0IvPhwPAA';
         const accountLogoUrl = 'null';
         window.initChatApp(token);
       };
