--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
          Demon Demon
       </div>
    </body>
-   <script> const script = document.createElement("script"); script.src = "https://cdn.buckplatform.com/webchat.js"; script.onload = function () { const token = 'eyJhbGciOiJFRDI1NTE5In0.eyJ1c2VyX2lkIjoiYWZkNjcxMjItZTAzZC00ODAzLTgzYmItMjYwZmViMjhiOWEyIiwiZXhwIjoyNTEzMjUzMzE5LCJuYmYiOjE3MjQzMzQ5MDksImlzcyI6IkJ1Y2suYWkiLCJhdWQiOiJ3ZWJjaGF0IiwiYWNjb3VudF9pZCI6ImRmMGVmM2QzLTQ3NDctNGQ5MC1iYTk2LTE2MmQ2N2FlMzcyMiJ9.53DjedtAjyf6d236dcmOMnAm8esdgTVA0AoVVLlGKhcixAC0souRUeF-cjn4f2lH5kJpqmTksV130Yh9cJdsBg'; const accountLogoUrl = 'null'; window.initChatApp(token, accountLogoUrl); }; document.head.appendChild(script); </script>
+   <script>
+      const script = document.createElement("script");
+      script.src = "https://cdn.buckplatform.com/webchat.js";
+      script.onload = function () {
+          const token = 'dac886f8e070b667c485d350f4bd61b4b52bb7162d3701fffc47467eb2a97a16';
+          const accountLogoUrl = 'null';
+          window.initChatApp(token, accountLogoUrl);
+      };
+      document.head.appendChild(script);
+  </script>
 </html>
